update spring, java core